[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/images/bars/MiniTargetMarker.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Inventory/TargetMiniShow.gd" type="Script" id=2]

[node name="TargetMiniShow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 106, 52 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 116 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.894118, 0.376471, 0.321569, 1 )
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1080.0
margin_bottom = 104.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -494.32, 56.4948 )
texture = ExtResource( 1 )
